# madmom-beats-lite

./: .gitignore  .gitmodules  ATTRIBUTION.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release-wheels.yml
scripts/: compare_outputs.py  generate_golden.sh  make_short_clip.sh  predecode_to_npz.py  reference_extract.py  run_parity.sh  setup_env.sh  setup_submodule.sh
src/madmom/: __init__.py
src/madmom/audio/: __init__.py  comb_filters.c
src/madmom/features/: __init__.py  beats_crf.c
src/madmom/io/: __init__.py
src/madmom/ml/: hmm.c
src/madmom/ml/nn/: layers.c
src/madmom_beats_lite/: __init__.py  _shared.py  analyze.py  api.py  cli.py  parity.py  progress.py  reference.py  types.py
src/madmom_beats_lite/_vendor/madmom_lite/: __init__.py  _mem.py  processors.py
src/madmom_beats_lite/_vendor/madmom_lite/audio/: __init__.py  filters.py  signal.py  spectrogram.py  stft.py
src/madmom_beats_lite/_vendor/madmom_lite/features/: __init__.py  beats.py  beats_hmm.py  downbeats.py
src/madmom_beats_lite/_vendor/madmom_lite/io/: __init__.py  audio.py
src/madmom_beats_lite/_vendor/madmom_lite/ml/: __init__.py
src/madmom_beats_lite/_vendor/madmom_lite/ml/nn/: __init__.py  activations.py  layers.py
src/madmom_beats_lite/_vendor/madmom_lite/models/: __init__.py
src/madmom_beats_lite/_vendor/madmom_lite/utils/: __init__.py
tests/: test_analyze_unit.py  test_contract.py  test_parity.py  test_parity_ci_sample.py  test_parity_full.py  test_parity_short.py  test_progress.py
tools/: benchmark_cpu_mem.py  benchmark_runtime.py  build_wheels.py
tools/bench/: run_time_l.sh
tools/regen/: README.md  __init__.py  common.py  compare_parity.py  fetch_fixtures.py  fixtures_manifest.json  generate_goldens.py
