[build-system]
requires = [
  "setuptools>=69",
  "wheel==0.45.1",
  "numpy==2.2.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "madmom-beats-lite"
version = "1.0.1"
description = "Parity-safe beat/downbeat extraction wrapper around pinned upstream madmom"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
  "numpy==2.2.3",
  "scipy==1.13.1",
]

[project.scripts]
madmom-beats-lite = "madmom_beats_lite.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
madmom = [
  "models/LICENSE",
  "models/README.rst",
  "models/downbeats/2016/downbeats_blstm_*.pkl",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
